--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "run": "supervisor app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,7 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6",
-    "supervisor": "^0.12.0"
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
